[package]
name = "connect-four-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 3


