[package]
name = "connect-four-website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
connect-four-engine = { path = "../core" }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.82"

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
